refactor registration - do not expect is_admin
