# internal/handlers/auth/register.go
@@ -7,7 +7,7 @@ import (
 )
 
 func (h *handler) RegisterAdmin(c *fiber.Ctx) error {
-	var userIn RegisterIn
+	var userIn RegisterAdminIn
 
 	if err := json.Unmarshal(c.Body(), &userIn); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "fail", "message": err.Error()})
@@ -18,7 +18,13 @@ func (h *handler) RegisterAdmin(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "fail", "message": err.Error()})
 	}
 
-	_, err = h.authService.Register(DtoToModel(userIn))
+	_, err = h.authService.Register(&model.User{
+		Username:   userIn.Username,
+		FirstName:  userIn.FirstName,
+		MiddleName: userIn.MiddleName,
+		Password:   userIn.Password,
+		IsAdmin:    true,
+	})
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "fail", "message": err.Error()})
 	}
@@ -27,7 +33,7 @@ func (h *handler) RegisterAdmin(c *fiber.Ctx) error {
 }
 
 func (h *handler) RegisterUser(c *fiber.Ctx) error {
-	var userIn RegisterIn
+	var userIn RegisterUserIn
 
 	if err := json.Unmarshal(c.Body(), &userIn); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "fail", "message": err.Error()})
@@ -38,7 +44,7 @@ func (h *handler) RegisterUser(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "fail", "message": err.Error()})
 	}
 
-	patientUserId, err := h.authService.Register(DtoToModel(userIn))
+	patientUserId, err := h.authService.Register(DtoUserToModel(userIn))
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "fail", "message": err.Error()})
 	}
@@ -55,7 +61,7 @@ func (h *handler) RegisterUser(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": "success", "message": "user successfully registered"})
 }
 
-func DtoToModel(user RegisterIn) *model.User {
+func DtoUserToModel(user RegisterUserIn) *model.User {
 	return &model.User{
 		Username:   user.Username,
 		FirstName:  user.FirstName,
@@ -65,6 +71,6 @@ func DtoToModel(user RegisterIn) *model.User {
 		Snils:      user.Snils,
 		Email:      user.Email,
 		Password:   user.Password,
-		IsAdmin:    user.IsAdmin,
+		IsAdmin:    false,
 	}
 }
